# simple-pub-sub

./: Cargo.toml  README.md  docker-compose.yml
drawing/: simple-pub-sub-architecture.drawio
src/: lib.rs  main.rs
src/domain/: mod.rs
src/domain/model/: mod.rs  pub_sub_message.rs  service_error.rs  subscription.rs  topic.rs
src/domain/ports/: message_persistence_port.rs  mod.rs  subscription_persistence_port.rs  topic_persistence_port.rs
src/domain/usecase/: ack_message_use_case.rs  create_message_use_case.rs  create_subscription_use_case.rs  create_topic_use_case.rs  get_subscriptions_use_case.rs  get_topics_use_case.rs  mod.rs
src/infrastructure/adapter/: mod.rs
src/infrastructure/adapter/config/: http_server_config.rs  mod.rs  mongo_db_client.rs
src/infrastructure/adapter/in/: mod.rs
src/infrastructure/adapter/in/health_check/: health_check_api.rs  mod.rs
src/infrastructure/adapter/in/message/: incoming_messages_listener.rs  incoming_messages_session.rs  message_dto.rs  messages_api.rs  mod.rs  publisher_server.rs  publisher_session_handler.rs
src/infrastructure/adapter/in/subscription/: mod.rs  subscription_api.rs  subscription_dto.rs
src/infrastructure/adapter/in/topic/: mod.rs  topic_api.rs  topic_dto.rs
tests/: mod.rs
tests/config/: config.rs
