[package]
name = "simple-pub-sub"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.188"
serde_json = "1.0.4"
futures = "0.3.28"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
async-trait = "0.1.83"
actix-web = "4.8"
chrono = { version =  "0.4.38", features = ["serde"]}
uuid = { version = "1.11.0", features = ["v4"] }
bson = {version = "2.13.0", features = ["chrono-0_4"]}

[dependencies.mongodb]
version = "3.1.0"
